--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header id="showcase">
         <h1>Welcome to Warwick's portal</h1>
-        <p>Follow the links below to my web page & my web page grid!</p>
+        <p>Kindly follow the links below to my web page & my web page grid!</p>
         <span style='font-size:100px;'>&#8681;</span>
         <a href="./My-Basic-Web-Page-Fix/index.html" class="button-one">My-Web-Page</a>
         <a href="./My-CSS-Grid-Round2/index.html" class="button-two">My-Web-Page-Grid</a>
@@ -23,7 +23,7 @@
 <div class = "section-b">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis a, iusto saepe nam ullam veniam, eum, quisquam assumenda obcaecati doloribus possimus neque expedita molestiae. Porro accusamus nostrum, voluptatem veritatis laudantium eos nihil dicta deserunt quasi soluta. Suscipit labore est illum laudantium! Quia esse, obcaecati eligendi tenetur nam repellendus et minus.</div>
 
 <div class = "section-c"><div class="box1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias tempore nam corrupti assumenda nesciunt perspiciatis quas doloremque sint cumque. Autem.</div>
-<div class="box2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias tempore nam corrupti assumenda nesciunt perspiciatis quas doloremque sint cumque. Autem.</div>
+<div class="box2">Loremmmm ipsum dolor sit amet consectetur adipisicing elit. Molestias tempore nam corrupti assumenda nesciunt perspiciatis quas doloremque sint cumque. Autem.</div>
 <div class="box3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias tempore nam corrupti assumenda nesciunt perspiciatis quas doloremque sint cumque. Autem.</div>
 </div>
 
